assets/scss/main.scss
/* ... */
// FAQ section
.faq {
    width: 45%;
}

.circled-step {
     background: $blue;
     border-radius: 0.8em;
     color: $white;
     display: inline-block;
     font-weight: bold;
     font-size: 1.8rem;
     line-height: 1.6em;
     margin-right: 1rem;
     text-align: center;
     width: 1.6em;
}

.line-clamp-2 {
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
}

.line-clamp-3 {
    display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
    overflow: hidden;
}

.card a.read-more {
    bottom: 12px;
}

.card-wrapper {
    width: 100%;
}

.background-color-1 {
    background-color: #e5f1fc;
}

.external-link-icon {
    fill: $primary;
}

.outline-border {
  border: 2px solid white;
  outline: 2px solid $primary;
}

.splide__arrows {
  display: none !important;
  @include media-breakpoint-up(lg) {
    display: flex !important;
  }
}

// Banner Survey
.banner-survey {
  background-color: #001009;
  min-height: 316px;

  h2 {
    color: #F6F8F1;
    font-size: 2.5rem;

    @include media-breakpoint-up(xl) {
      font-size: 3rem;
      white-space: nowrap;
    }
  }

  .accent {
    color: #F5A01A;
    text-transform: uppercase;
  }

  p {
    color: #F6F8F1;
  }

  &__title-wrapper {
    width: 60%;

    @include media-breakpoint-up(lg) {
      width: 100%;
    }
  }

  &__shape {
    position: absolute;
    height: 570px;
    width: 570px;
    bottom: 25%;
    left: 0%;
    background-image: url("https://www.canada.ca/content/dam/tbs-sct/images/digital-government/g7_gov_ai/gov_ai_1920x360.png");
    background-size: 150% 100%;

    --mask: linear-gradient(to bottom,
        rgba(0,0,0, 1) 0,   rgba(0,0,0, 1) 40%,
        rgba(0,0,0, 0) 95%, rgba(0,0,0, 0) 0
    ) 100% 50% / 100% 100% repeat-x;

    -webkit-mask: var(--mask);
    mask: var(--mask);

    @include media-breakpoint-up(md) {
      left: 0%;
    }

    @include media-breakpoint-up(lg) {
      width: 1080px;
      height: 640px;
      left: 0%;
      top: -90%;
      --mask: linear-gradient(to left,
          rgba(0,0,0, 1) 0,   rgba(0,0,0, 1) 40%,
          rgba(0,0,0, 0) 95%, rgba(0,0,0, 0) 0
      ) 100% 50% / 100% 100% repeat-x;

      -webkit-mask: var(--mask);
      mask: var(--mask);
    }

    @include media-breakpoint-up(xl) {
      left: 0%;
    }
  }

  &__image {
    position: relative;
    width: 100%;
    max-width: 165px;
    z-index: 1;

    @include media-breakpoint-up(lg) {
      max-width: 292px;
    }
  }
}

